{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 18,
  "lineage": "eb0d5c1a-78a1-e451-86ec-41f0e1027ab4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602388495233:vpc/vpc-931184fb",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-63d1bc0b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-10650978",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-931184fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-5fc18737",
            "owner_id": "602388495233"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602388495233:security-group/sg-0c3b6bfd057809c11",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3b6bfd057809c11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "OpenTDF platform API",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dcs-level-3-ecs-sg",
            "name_prefix": "",
            "owner_id": "602388495233",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Project": "dcs-level-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-931184fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602388495233:security-group/sg-05ef708967db0d1bf",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05ef708967db0d1bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "PostgreSQL from default VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dcs-level-3-rds-sg",
            "name_prefix": "",
            "owner_id": "602388495233",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Project": "dcs-level-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-931184fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}